# chi_sdk

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  rebuild.py  requirements-dev.txt  run.py  setup.py
chi_sdk/: admin.py  sdk.py
chi_sdk/chi_admin/: __init__.py  doctor.py  download.py  ensure_chi.py  starter_templates.py  utils.py
docs/: MIGRATION.md  about.md  advanced_usage.md  agent-docs.md  basic_usage.md  setup.md
docs/full_documentation/: 00_Installation_and_Usage_patterns.md  01_basic_concepts.md  02_chi_sdk.md  03_chi_tui_how_to_configure.md  04_widget_index.md  index.md
docs/guides/: integration.md
docs/release-notes/: RELEASE_TEMPLATE.md  next.md  v0.0.2.md
docs/tasks/: 020-admin-init-mvp-discuss.md  020-admin-init-mvp.md  021-admin-include-src-rebuild-discuss.md  021-admin-include-src-rebuild.md  022-chi-tui-bin-wheels-discuss.md  022-chi-tui-bin-wheels.md  023-cli-ui-snippet-integration-discuss.md  023-cli-ui-snippet-integration.md  024-licence-change.md  README.md  inbox.RAW.md
docs/tasks/done/: 001-registry-phase-1.md  002-panel-widget.md  003-registry-builder.md  004-form-mapping-move.md  005-ci-dx.md  006-headless-stream-smoke.md  007-pane-b-menu-offset.md  008-docs-cleanup.md  009-registry-phase-2.md  010-open-source-repo-preparation.md
docs/tmp/: install-logic.md  loading-logic.md
docs/tui-configuration/: README.md
scripts/: check_max_lines.py
