[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chi-sdk"
version = "0.0.5"
description = "Build beautiful Terminal UIs for Python CLIs without rewriting your code"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "click>=8",
  "pydantic>=2",
]
authors = [{name = "ContextOps"}]
license = "Apache-2.0"
# classifiers kept minimal to avoid deprecation warnings from setuptools; full license info in LICENSE files

[project.urls]
homepage = "https://github.com/contextops/chi_sdk"
repository = "https://github.com/contextops/chi_sdk"

[project.scripts]
chi-admin = "chi_sdk.admin:main"
chi-tui = "chi_sdk.tui_runner.runner:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["chi_sdk*"]

[tool.setuptools.package-data]
chi_sdk = ["bin/*"]

[project.optional-dependencies]
dev = [
  "pre-commit>=3.6",
  "black>=24.3",
  "ruff>=0.4",
  "pytest>=7",
]
